[package]
name = "projfs"
version = "0.1.1"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/clouds56/projfs-rs"
description = "Bindings for Windows Projected Filesystem API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
projfs-sys = { version = "=0.1.1", path = "sys" }
uuid = { version = "0.8", features = ["v4"] }
bitflags = "1.0"
chashmap = "2.0"

[dev-dependencies]
winreg = "0.7"

[workspace]
members = [ "sys" ]
