[package]
name = "projfs-sys"
version = "0.1.1"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"
description = "Low-level bindings for Windows Projected Filesystem API"
license = "MIT"
repository = "https://github.com/clouds56/projfs-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.54", optional = true }

[features]
default = []
